<resources>
  <string name="app_name">TileView</string>
  <string name="init_txtview">Pas encore d\'infos</string>  
  <string name="button_txt">&gt;&lt;</string>  
  <string name="bgcl">Background color</string>
  <string name="fgcl">Foreground color</string>  
  
  <string name="menu4">MinTime</string>
  <string name="menu4_1">10s</string>
  <string name="menu4_2">5m</string>
  <string name="menu4_3">30m</string>

  
  <string name="menu1">Tiles</string>
  <string name="menu1_1">ign_1</string>
  <string name="menu1_2">ign_2</string>
  
  <string name="menu2">GPX</string>
  
  <string name="menu3">MockLoc</string>  
  <string name="menu3_1">1-Vauvert</string>
  <string name="menu3_2">2-Grau</string>
  <string name="menu3_3">3-Dormi</string>
  <string name="menu3_4">4</string>
  <string name="menu3_5">5</string>
  
  <string name="menu5">Stop</string>
</resources>
