<?xml version="1.0" encoding="utf-8"?>
<!--https://developer.android.com/guide/topics/resources/menu-resource-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	 <item android:id="@+id/min_time"
          android:title="@string/menu4">
        <menu>
		<group android:checkableBehavior="single">
            <item android:id="@+id/menu4_1"
                  android:title="@string/menu4_1" 
                  android:checked="true"
                  />                  
			<item android:id="@+id/menu4_2"
				  android:title="@string/menu4_2" />
			<item android:id="@+id/menu4_3"
				  android:title="@string/menu4_3" />
		</group>
        </menu>
    </item> 
    <item android:id="@+id/tiles"
          android:title="@string/menu1">
        <menu>
		<group android:checkableBehavior="single">
            <item android:id="@+id/menu1_1"
                  android:title="@string/menu1_1"
                  />
			<item android:id="@+id/menu1_2"
				  android:title="@string/menu1_2" 
				  android:checked="true" />
		</group>
        </menu>
    </item>      
    <item android:id="@+id/menu2"
          android:title="@string/menu2"
          android:checkable="true"
          android:checked="true"/>
          
     <item android:id="@+id/menu3"
          android:title="@string/menu3"> 
          
        <menu>
		<group>
            <item android:id="@+id/menu3_1"
                  android:title="@string/menu3_1" />
			<item android:id="@+id/menu3_2"
				  android:title="@string/menu3_2" />
			<item android:id="@+id/menu3_3"
				  android:title="@string/menu3_3" />
			<item android:id="@+id/menu3_4"
				  android:title="@string/menu3_4" />
			<item android:id="@+id/menu3_5"
				  android:title="@string/menu3_5" />
		</group>
        </menu>
          
          
     </item> 
     
     <item android:id="@+id/menu5"
          android:title="@string/menu5" />
          
       
</menu>
